unit tests for smartrowheightcache added

--- a/tests/makefile.bcc
+++ b/tests/makefile.bcc
@@ -103,6 +103,7 @@ TEST_OBJECTS =  \
 	$(OBJS)\test_iostreams.obj \
 	$(OBJS)\test_largefile.obj \
 	$(OBJS)\test_memstream.obj \
+	$(OBJS)\test_smartrowheightcachetest.obj \
 	$(OBJS)\test_socketstream.obj \
 	$(OBJS)\test_sstream.obj \
 	$(OBJS)\test_stdstream.obj \
@@ -715,6 +716,9 @@ $(OBJS)\test_vsnprintf.obj: .\strings\vsnprintf.cpp
 
 $(OBJS)\test_hexconv.obj: .\strings\hexconv.cpp
 	$(CXX) -q -c -P -o$@ $(TEST_CXXFLAGS) .\strings\hexconv.cpp
+
+$(OBJS)\test_smartrowheightcachetest.obj: .\smartrowheightcache\smartrowheightcachetest.cpp
+	$(CXX) -q -c -P -o$@ $(TEST_CXXFLAGS) .\smartrowheightcache\smartrowheightcachetest.cpp
 
 $(OBJS)\test_datastreamtest.obj: .\streams\datastreamtest.cpp
 	$(CXX) -q -c -P -o$@ $(TEST_CXXFLAGS) .\streams\datastreamtest.cpp
