--- a/tests/test_vc8_test.vcproj
+++ b/tests/test_vc8_test.vcproj
@@ -1119,6 +1119,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\smartrowheightcache\smartrowheightcachetest.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\net\socket.cpp"
 				>
 			</File>
