--- a/tests/test_vc9_test.vcproj
+++ b/tests/test_vc9_test.vcproj
@@ -1091,6 +1091,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\smartrowheightcache\smartrowheightcachetest.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\net\socket.cpp"
 				>
 			</File>
