--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -121,6 +121,7 @@ TEST_OBJECTS =  \
 	test_iostreams.o \
 	test_largefile.o \
 	test_memstream.o \
+	test_smartrowheightcachetest.o \
 	test_socketstream.o \
 	test_sstream.o \
 	test_stdstream.o \
@@ -668,6 +669,9 @@ test_vsnprintf.o: $(srcdir)/strings/vsnprintf.cpp $(TEST_ODEP)
 
 test_hexconv.o: $(srcdir)/strings/hexconv.cpp $(TEST_ODEP)
 	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/strings/hexconv.cpp
+
+test_smartrowheightcachetest.o: $(srcdir)/smartrowheightcache/smartrowheightcachetest.cpp $(TEST_ODEP)
+	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/smartrowheightcache/smartrowheightcachetest.cpp
 
 test_datastreamtest.o: $(srcdir)/streams/datastreamtest.cpp $(TEST_ODEP)
 	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/streams/datastreamtest.cpp
