--- a/tests/test_vc7_test.vcproj
+++ b/tests/test_vc7_test.vcproj
@@ -488,6 +488,9 @@
 				RelativePath=".\scopeguard\scopeguardtest.cpp">
 			</File>
 			<File
+				RelativePath=".\smartrowheightcache\smartrowheightcachetest.cpp">
+			</File>
+			<File
 				RelativePath=".\net\socket.cpp">
 			</File>
 			<File
