--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -114,6 +114,7 @@ TEST_OBJECTS =  \
 	test_crt.o \
 	test_vsnprintf.o \
 	test_hexconv.o \
+	test_smartrowheightcache\smartrowheightcachetest.o \
 	test_datastreamtest.o \
 	test_ffilestream.o \
 	test_fileback.o \
@@ -121,7 +122,6 @@ TEST_OBJECTS =  \
 	test_iostreams.o \
 	test_largefile.o \
 	test_memstream.o \
-	test_smartrowheightcachetest.o \
 	test_socketstream.o \
 	test_sstream.o \
 	test_stdstream.o \
@@ -670,8 +670,8 @@ test_vsnprintf.o: $(srcdir)/strings/vsnprintf.cpp $(TEST_ODEP)
 test_hexconv.o: $(srcdir)/strings/hexconv.cpp $(TEST_ODEP)
 	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/strings/hexconv.cpp
 
-test_smartrowheightcachetest.o: $(srcdir)/smartrowheightcache/smartrowheightcachetest.cpp $(TEST_ODEP)
-	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/smartrowheightcache/smartrowheightcachetest.cpp
+test_smartrowheightcache\smartrowheightcachetest.o: $(srcdir)/smartrowheightcache\smartrowheightcachetest.cpp $(TEST_ODEP)
+	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/smartrowheightcache\smartrowheightcachetest.cpp
 
 test_datastreamtest.o: $(srcdir)/streams/datastreamtest.cpp $(TEST_ODEP)
 	$(CXXC) -c -o $@ $(TEST_CXXFLAGS) $(srcdir)/streams/datastreamtest.cpp
