--- a/tests/test_vc7_test_gui.vcproj
+++ b/tests/test_vc7_test_gui.vcproj
@@ -542,6 +542,9 @@
 				RelativePath=".\controls\slidertest.cpp">
 			</File>
 			<File
+				RelativePath=".\smartrowheightcache\smartrowheightcachetest.cpp">
+			</File>
+			<File
 				RelativePath=".\net\socket.cpp">
 			</File>
 			<File
