--- a/Makefile.in
+++ b/Makefile.in
@@ -3647,6 +3647,7 @@ COND_WXUNIV_0_ADVANCED_HDR =  \
 	wx/wizard.h \
 	wx/addremovectrl.h \
 	wx/activityindicator.h \
+	wx/private/smartrowheightcache.h \
 	$(ADVANCED_PLATFORM_HDR) \
 	$(ADVANCED_PLATFORM_NATIVE_HDR)
 @COND_WXUNIV_0@ADVANCED_HDR = $(COND_WXUNIV_0_ADVANCED_HDR)
@@ -3702,6 +3703,7 @@ COND_WXUNIV_1_ADVANCED_HDR =  \
 	wx/wizard.h \
 	wx/addremovectrl.h \
 	wx/activityindicator.h \
+	wx/private/smartrowheightcache.h \
 	$(ADVANCED_PLATFORM_HDR) \
 	wx/generic/animate.h
 @COND_WXUNIV_1@ADVANCED_HDR = $(COND_WXUNIV_1_ADVANCED_HDR)
